--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cesar Jimenez</title>
     <script src="https://kit.fontawesome.com/1ce177fd9f.js" crossorigin="anonymous"></script>
     <link rel="Shortcut icon" type="image/png" href="img/favicon.png" />
