--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="projectCardsContainer">
     
           <a href = "https://github.com/cheternal7890/WordPress-Clone" div class="card">
-            <img src="/img/WordPress Image.png" alt = "Project Preview Screenshot" class = "cardPreviewImage" width="460" height="265">
+            <img src="/img/WordPress Image.png" alt = "Project Preview Screenshot" class = "cardPreviewImage">
             <span class="projectTitle">WordPress Clone</span>
             <p class="projectDescription">
               Developed a front-end web application that closely emulates the
@@ -61,7 +61,7 @@
 
    
           <a href = "https://github.com/cheternal7890/Halcyon-Light" div class="card">
-            <img src="/img/Minimalistic Theme.png" alt = "Project Preview Screenshot" class = "cardPreviewImage" width="460" height="265">
+            <img src="/img/Minimalistic Theme.png" alt = "Project Preview Screenshot" class = "cardPreviewImage">
             <span class="projectTitle">Halycon Light</span>
             <p class="projectDescription">
                 Halcyon Light Mode Theme is a minimalistic light mode theme designed with Discord's color style in mind.
@@ -69,7 +69,7 @@
           </a>
 
           <a href = "https://github.com/cheternal7890/Weather-app" div class="card">
-            <img src="/img/Weather App Image.png" alt = "Project Preview Screenshot" class = "cardPreviewImage" width="460" height="265">
+            <img src="/img/Weather App Image.png" alt = "Project Preview Screenshot" class = "cardPreviewImage">
             <span class="projectTitle">Weather App</span>
             <p class="projectDescription">
                 Weather app created using HTML, CSS, and Javascript leveraging the OpenWeatherMap API.
