--- a/index.html
+++ b/index.html
@@ -55,25 +55,38 @@
             <span class="projectTitle">WordPress Clone</span>
             <p class="projectDescription">
               Developed a front-end web application that closely emulates the
-              appearance and style of a WordPress website using HTML and CSS.
+              appearance and style of a WordPress website using HTML5 and CSS3.
+            </p>
+          </a>
+
+
+          
+          <a href = "https://github.com/cheternal7890/Hulu-Clone" div class="card">
+            <img src="/img/Hulu Clone Image.jpg" alt = "Project Preview Screenshot" class = "cardPreviewImage">
+            <span class="projectTitle">Hulu Clone</span>
+            <p class="projectDescription">
+               This is a front end clone of Hulu's website made using HTML5 and CSS3. This website was also designed with mobile in mind.
             </p>
           </a>
 
    
-          <a href = "https://github.com/cheternal7890/Halcyon-Light" div class="card">
-            <img src="/img/Minimalistic Theme.png" alt = "Project Preview Screenshot" class = "cardPreviewImage">
-            <span class="projectTitle">Halycon Light</span>
-            <p class="projectDescription">
-                Halcyon Light Mode Theme is a minimalistic light mode theme designed with Discord's color style in mind.
-            </p>
-          </a>
+          
 
           <a href = "https://github.com/cheternal7890/Weather-app" div class="card">
             <img src="/img/Weather App Image.png" alt = "Project Preview Screenshot" class = "cardPreviewImage">
             <span class="projectTitle">Weather App</span>
             <p class="projectDescription">
-                Weather app created using HTML, CSS, and Javascript leveraging the OpenWeatherMap API.
+                Weather app created using HTML5, CSS3, and Javascript leveraging the OpenWeatherMap API.
                 This web application allows users to check the weather forecast for various cities around the world.
+            </p>
+          </a>
+
+
+          <a href = "https://github.com/cheternal7890/Halcyon-Light" div class="card">
+            <img src="/img/Minimalistic Theme.png" alt = "Project Preview Screenshot" class = "cardPreviewImage">
+            <span class="projectTitle">Halycon Light</span>
+            <p class="projectDescription">
+                Halcyon Light Mode Theme is a minimalistic light mode theme designed with Discord's color style in mind.
             </p>
           </a>
       </section>
