--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <img src="/img/Hulu Clone Image.jpg" alt = "Project Preview Screenshot" class = "cardPreviewImage">
             <span class="projectTitle">Hulu Clone</span>
             <p class="projectDescription">
-               This is a front end clone of Hulu's website made using HTML5 and CSS3. This website was also designed with mobile in mind.
+               This is a front end clone of Hulu's website made using HTML5 and CSS3.
             </p>
           </a>
 
