--- a/index.html
+++ b/index.html
@@ -65,7 +65,14 @@
             <img src="/img/Hulu Clone Image.jpg" alt = "Project Preview Screenshot" class = "cardPreviewImage">
             <span class="projectTitle">Hulu Clone</span>
             <p class="projectDescription">
-               This is a front end clone of Hulu's website made using HTML5 and CSS3.
+               This is a front end clone of Hulu's website made using HTML5 and CSS3. 
+               The project closely mirrors Hulu's design elements and layout, providing users with an immersive experience reminiscent of the original platform.
+
+
+
+
+
+
             </p>
           </a>
 
