Chaned Landing Page Description

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section id="about">
         <div class="landingPageDetails">
           <h1>Cesar Jimenez</h1>
-          <h4>Web Designer</h4>
+          <h4>Web Developer</h4>
           <p class="landingDescription">
             Exploring pixels and code, one quality click at a time.
           </p>
