Adjusted centering of texts

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cesar Jimenez</title>
-    <script src="https://kit.fontawesome.com/1ce177fd9f.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/1ce177fd9f.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="Shortcut icon" type="image/png" href="img/favicon.png" />
     <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
@@ -38,70 +41,126 @@
       </section>
 
       <section id="projects" class="personalProjects">
-        <h1>Personal Projects</h1>
-        <div class="sectionDescription">
-          <p>Here are some personal projects I have worked on.</p>
-          <p>
-            You can find more on
-            <a href="https://github.com/cheternal7890">Github.</a>
-          </p>
+        <div class="sectionPageDetails">
+          <h1>Personal Projects</h1>
+          <div class="sectionDescription">
+            <p>Here are some personal projects I have worked on.</p>
+            <p>
+              You can find more on
+              <a href="https://github.com/cheternal7890">Github.</a>
+            </p>
+          </div>
         </div>
 
         <div class="projectCardsContainer">
-
-          <a href = "https://github.com/cheternal7890/Hulu-Clone" div class="card">
-            <img src="/img/Hulu Clone Image.jpg" alt = "Project Preview Screenshot" class = "cardPreviewImage">
+          <a
+            href="https://github.com/cheternal7890/Hulu-Clone"
+            div
+            class="card"
+          >
+            <img
+              src="/img/Hulu Clone Image.jpg"
+              alt="Project Preview Screenshot"
+              class="cardPreviewImage"
+            />
             <span class="projectTitle">Hulu Clone</span>
             <p class="projectDescription">
-               This is a front end clone of Hulu's website made using HTML5 and CSS3. 
-               The project mirrors Hulu's design elements and layout, providing users with an immersive experience reminiscent of the original platform.
+              This is a front end clone of Hulu's website made using HTML5 and
+              CSS3. The project mirrors Hulu's design elements and layout,
+              providing users with an immersive experience reminiscent of the
+              original platform.
             </p>
           </a>
 
-          <a href = "https://github.com/cheternal7890/Tesla-Clone" div class="card">
-            <img src="/img/Tesla Image.png" alt = "Project Preview Screenshot" class = "cardPreviewImage">
+          <a
+            href="https://github.com/cheternal7890/Tesla-Clone"
+            div
+            class="card"
+          >
+            <img
+              src="/img/Tesla Image.png"
+              alt="Project Preview Screenshot"
+              class="cardPreviewImage"
+            />
             <span class="projectTitle">Tesla Clone</span>
             <p class="projectDescription">
-               This is a responsive Tesla website clone built using React.JS, Redux and Styled-Components.
+              This is a responsive Tesla website clone built using React.JS,
+              Redux and Styled-Components.
             </p>
           </a>
 
-          <a href = "https://github.com/cheternal7890/More-Practice-Landing-Page" div class="card">
-            <img src="/img/ChatGPT Landing Page.png" alt = "Project Preview Screenshot" class = "cardPreviewImage">
+          <a
+            href="https://github.com/cheternal7890/More-Practice-Landing-Page"
+            div
+            class="card"
+          >
+            <img
+              src="/img/ChatGPT Landing Page.png"
+              alt="Project Preview Screenshot"
+              class="cardPreviewImage"
+            />
             <span class="projectTitle">ChatGPT's Website</span>
             <p class="projectDescription">
-                This is a landing page based on ChatGPT's website design using a mobile first approach.
+              This is a landing page based on ChatGPT's website design using a
+              mobile first approach.
             </p>
           </a>
 
-          <a href = "https://github.com/cheternal7890/Electron-Weather-App" div class="card">
-            <img src="/img/Electron Weather App.png" alt = "Project Preview Screenshot" class = "cardPreviewImage">
+          <a
+            href="https://github.com/cheternal7890/Electron-Weather-App"
+            div
+            class="card"
+          >
+            <img
+              src="/img/Electron Weather App.png"
+              alt="Project Preview Screenshot"
+              class="cardPreviewImage"
+            />
             <span class="projectTitle">Weather Application</span>
             <p class="projectDescription">
-                Weather app created using Electron, React, CSS, and TypeScript by leveraging the OpenWeatherMap API.
-                This web application allows users to check the weather forecast for various cities around the world.
+              Weather app created using Electron, React, CSS, and TypeScript by
+              leveraging the OpenWeatherMap API. This web application allows
+              users to check the weather forecast for various cities around the
+              world.
             </p>
           </a>
 
-          <a href = "https://github.com/cheternal7890/Halcyon-Light" div class="card">
-            <img src="/img/Minimalistic Theme.png" alt = "Project Preview Screenshot" class = "cardPreviewImage">
+          <a
+            href="https://github.com/cheternal7890/Halcyon-Light"
+            div
+            class="card"
+          >
+            <img
+              src="/img/Minimalistic Theme.png"
+              alt="Project Preview Screenshot"
+              class="cardPreviewImage"
+            />
             <span class="projectTitle">Halycon Light</span>
             <p class="projectDescription">
-                Halcyon Light Mode Theme is a minimalistic light mode theme designed with Discord's color style in mind.
+              Halcyon Light Mode Theme is a minimalistic light mode theme
+              designed with Discord's color style in mind.
             </p>
           </a>
+        </div>
       </section>
 
+      <footer class="footerContainer">
+        <div class="footer">
+          <ul class="footerIcons">
+            <li class="footerItem">
+              <a href="https://www.linkedin.com/in/cesarjimenez-/"
+                ><i class="fa-brands fa-linkedin"></i
+              ></a>
+            </li>
+            <li class="footerItem">
+              <a href="https://github.com/cheternal7890"
+                ><i class="fa-brands fa-github"></i
+              ></a>
+            </li>
+          </ul>
+        </div>
 
-      <footer class = "footerContainer">
-            <div class = "footer">
-                <ul class = "footerIcons">
-                    <li class="footerItem"><a href="https://www.linkedin.com/in/cesarjimenez-/"><i class="fa-brands fa-linkedin"></i></a></li>    
-                    <li class="footerItem"><a href="https://github.com/cheternal7890"><i class="fa-brands fa-github"></i></a></li>         
-                </ul>
-            </div>
-
-            <p>Copyright &copy; cesarjimenez.us 2024</p>
+        <p>Copyright &copy; cesarjimenez.us 2024</p>
       </footer>
     </main>
   </body>
